# flightimpact

./: README.md  pyproject.toml
data/: README.md  airports.sample.json  benchmarks.template.csv  routes.study.csv
docs/: methods.md  modules.md  sprints.md  validation.md
src/flightimpact/: __init__.py  cli.py  data.py  distance.py  emissions.py  fuel.py  model.py  types.py  uncertainty.py  validation.py
tests/: test_data.py  test_distance.py  test_types.py  test_validation.py  test_validation_io.py
